[tool:pytest]
addopts = -vrsx
testpaths = windspharm

[flake8]
exclude = \
    setup.py, \
    windspharm/__init__.py, \
    doc/conf.py, \
    doc/sphinxext/plot_directive.py, \
    doc/devguide/gitwash_dumper.py

[versioneer]
VCS = git
style = pep440
versionfile_source = windspharm/_version.py
versionfile_build = windspharm/_version.py
tag_prefix = v
parentdir_prefix = windspharm

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"
install_requires = ["numpy", "pyspharm >= 1.0.8"]